# node

./: .bank  .commons  .dockerignore  .env  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .prettierrc  .requirements  1  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLE_LOG_AUDIT.md  CONTRIBUTING.md  D402_SPEC.md  D402_SPECS.md  D402_onepager.md  DEPS-AUDIT.md  Dockerfile  ESCROW_BUG_ANALYSIS.md  INSTALL.md  IPFS_YELLOWPAPER.md  L2PS_PHASES.md  L2PS_TESTING.md  LICENSE.md  MERGE_REPORT_stabilisation_into_petri.md  OMNIPROTOCOL_SETUP.md  OMNIPROTOCOL_TLS_GUIDE.md  PROJECT_INDEX.json  PROJECT_INDEX.md  PR_REVIEW_ESCROW_FEATURE.md  PR_REVIEW_FINAL.md  PR_REVIEW_RAW.md  PR_REVIEW_ROUND5.md  PR_TOFIX.md  README.md  (+68 more)
.beads/: config.yaml  deletions.jsonl  issues.jsonl  metadata.json
.claude/: settings.local.sync-conflict-20250901-171032-7JPPSQB.json
.github/: copilot-instructions.md
.mycelium/: br-sync-map.json  mycelium.db
.serena/: project.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
EscrowOnboarding/: ARCHITECTURE.md  IMPLEMENTATION_PHASES.md  PLAN.md  README.md  SDKS_REPO.md  STATUS.md
GUIDELINES/: .gitkeep  CODING.md  PR.md  VIBES.md
OmniProtocol/: 01_MESSAGE_FORMAT.md  02_OPCODE_MAPPING.md  03_PEER_DISCOVERY.md  04_CONNECTION_MANAGEMENT.md  05_PAYLOAD_STRUCTURES.md  06_MODULE_STRUCTURE.md  07_PHASED_IMPLEMENTATION.md  STATUS.md  (+5 more)
src/features/bridges/SolanaTankProgram/solana_tank/programs/solana_tank/: Cargo.toml
src/features/bridges/SolanaTankProgram/solana_tank/programs/solana_tank/src/: lib.rs
(+3597 files in other folders)
