[package]
name = "solana_tank"
version = "0.1.0"
description = "Solana LiquidityTank - Multisig treasury with rotating shard control and cross-chain bridge support"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_tank"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
